Divided the styles into different files per components

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,11 +1,11 @@
+@import './styles/variables';
 @import './media_mixin';
-
-$gold-gradient: radial-gradient(ellipse farthest-corner at right bottom, #FEDB37 0%, #FDB931 8%, #9f7928 30%, #8A6E2F 40%, transparent 80%),
-radial-gradient(ellipse farthest-corner at left top, #FFFFFF 0%, #FFFFAC 8%, #D1B464 25%, #5d4a1f 62.5%, #5d4a1f 100%);
-$dark-green: #275129;
-$light-green: #39783c;
-$dark-gold: #D89F2D;
-$light-gold: #E9DB8A;
+@import './styles/sidebar';
+@import './styles/component';
+@import './styles/about';
+@import './styles/resume';
+@import './styles/portfolios';
+@import './styles/contact';
 
 html {
   box-sizing: border-box;
@@ -89,128 +89,6 @@ body {
     width: 100%;
   }
 
-  aside {
-    width: 260px;
-    position: fixed;
-    top: 0;
-    height: 100%;
-    background-color: $dark-green;
-    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
-    color: #FFF;
-    margin-right: 20px;
-
-    @include _970 {
-      width: 800px;
-      z-index: 999;
-      height: 50px;
-    }
-
-    @include _870 {
-      width: 100%;
-      left: 0;
-    }
-
-    .heading {
-      position: relative;
-      padding: 30px;
-      text-align: center;
-
-      @include _970 {
-        display: none;
-      }
-
-      .avatar-wrap {
-        position: relative;
-        width: 186px;
-        height: 186px;
-        background: $gold-gradient;
-        border-radius: 100%;
-        text-align: center;
-        margin: 0 auto;
-
-        .avatar {
-          position: absolute;
-          top: 8px;
-          left: 8px;
-          border-radius: 100%;
-          margin-bottom: 50px;
-          filter: brightness(1.1);
-        }
-      }
-    }
-
-    nav {
-      margin-top: 50px;
-      width: 100%;
-      padding: 15px 5px;
-      border-top: 1px solid $light-green;
-      border-bottom: 1px solid $light-green;
-
-      @include _970 {
-        margin-top: 0;
-        padding: 0;
-        border: none;
-      }
-
-      ul {
-        @include _970 {
-          display: flex;
-        }
-
-        li {
-          list-style: none;
-          text-align: center;
-          display: block;
-          height: 50px;
-
-          @include _970 {
-            display: inline-block;
-            flex: 25%;
-          }
-
-          a {
-            text-transform: uppercase;
-            font-size: .94rem;
-            letter-spacing: 1px;
-            display: block;
-            padding: 5px;
-            color: #FFF;
-            font-weight: 600;
-            position: relative;
-            overflow: hidden;
-            z-index: 1;
-            cursor: pointer;
-            font-weight: 200;
-            line-height: 2.6rem;
-            outline: none;
-            height: 100%;
-
-            @include _970 {
-              line-height: 2.7rem;
-            }
-
-            @include _800 {
-              line-height: 3.2rem;
-            }
-
-            @include _525 {
-              line-height: 3.9rem;
-            }
-
-            &.active {
-              background: $light-green;
-            }
-
-            &:hover {
-              background: $light-green;
-              transition: all .4s ease-out;
-            }
-          }
-        }
-      }
-    }
-  }
-
   main {
     margin: 50px 0 50px 280px;
     width: calc(100% - 280px);
@@ -236,453 +114,6 @@ body {
       background-size: 100% 5px;
       background-position: 0 0, 0 100%;
       background-repeat: no-repeat;
-
-      .component {
-        margin-bottom: 80px;
-
-        @include _1170 {
-          margin-bottom: 50px;
-        }
-
-        .title {
-          position: relative;
-
-          h1 {
-            font-weight: 700;
-            margin-bottom: 40px;
-            text-transform: uppercase;
-            z-index: 999;
-            font-size: 2.57rem;
-            line-height: 3.2857rem;
-
-            @include _380 {
-              margin-bottom: 30px;
-            }
-          }
-
-          span {
-            font-size: 4.5rem;
-            position: absolute;
-            left: 0;
-            top: 100%;
-            line-height: 1;
-            font-weight: 900;
-            color: $dark-green;
-            display: inline-block;
-            text-transform: uppercase;
-            z-index: -1;
-            -webkit-transform: translateY(-40%);
-            transform: translateY(-40%);
-            -webkit-user-select: none;
-            -moz-user-select: none;
-            -ms-user-select: none;
-            user-select: none;
-            white-space: nowrap;
-          }
-        }
-
-        h2 {
-          text-align: right;
-          font-size: 2rem;
-          line-height: 2.7rem;
-          margin-bottom: 20px;
-
-          span {
-            color: $dark-green;
-          }
-        }
-
-        p {
-          margin-bottom: 1rem;
-        }
-
-        h4 {
-          font-size: 1.71rem;
-          line-height: 2.43rem;
-        }
-
-        h5 {
-          font-size: 1.43rem;
-          line-height: 2.14rem;
-          font-weight: 700;
-          margin-top: 15px;
-        }
-
-        h6 {
-          font-size: 1.14rem;
-          line-height: 1.857rem;
-        }
-
-
-        button,
-        input,
-        select {
-          height: 50px;
-          padding: 0 15px;
-        }
-
-        input,
-        select,
-        textarea {
-          width: 100%;
-          font-size: 0.94rem;
-          vertical-align: middle;
-        }
-
-        input,
-        select,
-        textarea,
-        button {
-          outline: none;
-        }
-
-        textarea {
-          padding: 10px 15px;
-        }
-      }
-
-      .btn {
-        margin-top: 30px;
-        background-color: $dark-green;
-        color: #FFF;
-        text-transform: uppercase;
-        padding: 0 30px;
-        display: inline-block;
-        font-size: .9rem;
-        letter-spacing: 2px;
-        height: 50px;
-        line-height: 50px;
-        border: 0;
-        position: relative;
-        cursor: pointer;
-
-        @include _500 {
-          margin-top: 20px;
-          padding: 0 20px;
-          height: 40px;
-          line-height: 40px;
-        }
-
-        &::before {
-          content: "";
-          position: absolute;
-          left: 0;
-          top: auto;
-          bottom: 0;
-          height: 2px;
-          width: 100%;
-        }
-
-        &:hover {
-          transition: all .4s ease-out;
-          background-color: $light-green;
-
-          &::before {
-            transform: scaleX(1);
-            transition: all .4s ease-out;
-            background: $dark-gold;
-          }
-        }
-      }
-
-      #about {
-        ul {
-
-          li {
-
-            b {
-              width: 120px;
-              display: inline-block;
-              position: relative;
-              margin-right: 10px;
-              vertical-align: top;
-
-              @include _800 {
-                width: 100px;
-              }
-
-              @include _525 {
-                width: 80px;
-              }
-
-              @include _450 {
-                width: 75px;
-              }
-
-              @include _380 {
-                width: 70px;
-              }
-
-              &::after {
-                content: ":";
-                position: absolute;
-                top: 0;
-                left: auto;
-                right: 0;
-              }
-            }
-
-            span {
-              display: inline-block;
-              width: 80%;
-
-              @include _1170 {
-                width: 77%;
-              }
-
-              @include _665 {
-                width: 75%;
-              }
-
-              @include _450 {
-                width: 70%;
-              }
-
-              @include _410 {
-                width: 68%;
-              }
-
-              @include _370 {
-                width: 65%;
-              }
-
-              @include _360 {
-                width: 65%;
-              }
-
-              @include _350 {
-                width: 60%;
-              }
-            }
-          }
-        }
-      }
-
-      #resume {
-
-        .skills-box {
-          display: flex;
-          flex-wrap: wrap;
-
-          .progress-wrap {
-            flex: 0 0 50%;
-            max-width: 50%;
-            margin-top: 30px;
-
-            .progress-title {
-              font-weight: 600;
-              margin-bottom: 0;
-            }
-
-            .progress {
-              display: flex;
-              align-items: center;
-
-              .progress-container {
-                background: #ababab;
-                display: block;
-                height: 6px;
-                width: 85%;
-                position: relative;
-
-                .progress-active {
-                  position: absolute;
-                  left: 0;
-                  top: 0;
-                  height: 100%;
-                  background: $dark-green;
-                }
-              }
-            }
-          }
-        }
-      }
-
-      #portfolios {
-
-        .portfolios-wrap {
-          display: flex;
-          flex-wrap: wrap;
-          justify-content: space-around;
-
-          .portfolios-box {
-            width: 32%;
-            margin-bottom: 20px;
-
-            @include _1170 {
-              width: 45%;
-            }
-
-            @include _725 {
-              width: 100%;
-            }
-
-            .potfolio-image {
-              position: relative;
-              background-position: center center;
-              background-repeat: no-repeat;
-              overflow: hidden;
-
-              &::before {
-                content: "";
-                position: absolute;
-                left: 15px;
-                top: 15px;
-                height: calc(100% - 30px);
-                width: calc(100% - 30px);
-                background: hsla(0, 0%, 100%, .9);
-                -webkit-transition: all .2s ease-out;
-                transition: all .2s ease-out;
-                -webkit-transform: scaleX(0);
-                transform: scaleX(0);
-                -webkit-transform-origin: 0;
-                transform-origin: 0;
-              }
-
-              img {
-                vertical-align: middle;
-                min-height: 100%;
-                min-width: 100%;
-              }
-
-              ul {
-                margin-bottom: 0;
-                padding-left: 0;
-                position: absolute;
-                left: 0;
-                top: 50%;
-                text-align: center;
-                width: 100%;
-                -webkit-transform: translateY(-50%);
-                transform: translateY(-50%);
-                visibility: hidden;
-                opacity: 0;
-                margin-top: 30px;
-                -webkit-transition: all .075s ease-in-out .2s;
-                transition: all .075s ease-in-out .2s;
-
-                li {
-                  list-style: none;
-                  display: inline-block;
-                  margin: 0 7px;
-
-                  button,
-                  a {
-                    cursor: pointer;
-                    display: inline-block;
-                    height: 45px;
-                    width: 45px;
-                    padding: 5px 0;
-                    vertical-align: middle;
-                    text-align: center;
-                    line-height: 1;
-                    background: #a4acc4;
-                    color: #fff;
-                    border: 1px solid #a4acc4;
-                    border-radius: 100px;
-                    outline: none;
-                    font-size: 1.25rem;
-                    -webkit-transition: all .4s ease-out;
-                    transition: all .4s ease-out;
-
-                    svg {
-                      vertical-align: middle;
-                      overflow: hidden;
-                      height: 100%;
-                    }
-                  }
-
-                  &.clicked {
-                    .popup {
-                      display: block;
-                    }
-                  }
-                }
-              }
-
-              &:hover {
-                &::before {
-                  transform: scaleX(1);
-                }
-
-                ul {
-                  visibility: visible;
-                  opacity: 1;
-                  margin-top: 0;
-                }
-              }
-            }
-
-            p {
-              font-size: 1.14rem;
-              line-height: 1.857rem;
-            }
-
-            .popup {
-              position: fixed;
-              width: 100%;
-              height: 100%;
-              top: 0;
-              left: 0;
-              background: linear-gradient(rgba(30,30,30,.6),#000 1810%);
-              z-index: 9999999;
-              -webkit-user-select: none;
-              -moz-user-select: none;
-              -ms-user-select: none;
-              user-select: none;
-              -webkit-tap-highlight-color: transparent;
-              display: none;
-
-              img {
-                display: block;
-                width: 60%;
-                margin: 0 auto;
-                position: fixed;
-                top: 50%;
-                left: 50%;
-                transform: translate(-50%, -50%);
-              }
-            }
-          }
-        }
-      }
-
-      #contact {
-
-        form {
-
-          .form-field {
-            margin-top: 30px;
-            position: relative;
-
-            label {
-              position: absolute;
-              left: 15px;
-              top: -13px;
-              background: $dark-green;
-              color: #FFF;
-              -webkit-transition: all .4s ease-out;
-              transition: all .4s ease-out;
-              pointer-events: none;
-              padding: 0 10px;
-              font-size: .94rem;
-            }
-
-            input,
-            textarea {
-              border: 1px solid $dark-green;
-              font-size: 1rem;
-              height: 50px;
-              padding: 0 15px;
-            }
-
-            textarea {
-              height: 190px;
-              padding: 10px 15px;
-            }
-          }
-        }
-      }
     }
   }
 }
