--- a/src/App.css
+++ b/src/App.css
@@ -490,11 +490,11 @@ aside nav ul li a:hover {
   transform: translate(-50%, -50%);
 }
 
-#contact form .form-field {
+#contact .form-field {
   margin-top: 30px;
   position: relative;
 }
-#contact form .form-field label {
+#contact .form-field label {
   position: absolute;
   left: 15px;
   top: -13px;
@@ -506,14 +506,14 @@ aside nav ul li a:hover {
   padding: 0 10px;
   font-size: 0.94rem;
 }
-#contact form .form-field input,
-#contact form .form-field textarea {
+#contact .form-field input,
+#contact .form-field textarea {
   border: 1px solid #275129;
   font-size: 1rem;
   height: 50px;
   padding: 0 15px;
 }
-#contact form .form-field textarea {
+#contact .form-field textarea {
   height: 190px;
   padding: 10px 15px;
 }
