--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -1,72 +1,67 @@
 #about {
-  ul {
 
-    li {
+  li b {
+    width: 120px;
+    display: inline-block;
+    position: relative;
+    margin-right: 10px;
+    vertical-align: top;
 
-      b {
-        width: 120px;
-        display: inline-block;
-        position: relative;
-        margin-right: 10px;
-        vertical-align: top;
+    @include _800 {
+      width: 100px;
+    }
 
-        @include _800 {
-          width: 100px;
-        }
+    @include _525 {
+      width: 80px;
+    }
 
-        @include _525 {
-          width: 80px;
-        }
+    @include _450 {
+      width: 75px;
+    }
 
-        @include _450 {
-          width: 75px;
-        }
+    @include _380 {
+      width: 70px;
+    }
 
-        @include _380 {
-          width: 70px;
-        }
+    &::after {
+      content: ":";
+      position: absolute;
+      top: 0;
+      left: auto;
+      right: 0;
+    }
+  }
 
-        &::after {
-          content: ":";
-          position: absolute;
-          top: 0;
-          left: auto;
-          right: 0;
-        }
-      }
+  span {
+    display: inline-block;
+    width: 80%;
 
-      span {
-        display: inline-block;
-        width: 80%;
+    @include _1170 {
+      width: 77%;
+    }
 
-        @include _1170 {
-          width: 77%;
-        }
+    @include _665 {
+      width: 75%;
+    }
 
-        @include _665 {
-          width: 75%;
-        }
+    @include _450 {
+      width: 70%;
+    }
 
-        @include _450 {
-          width: 70%;
-        }
+    @include _410 {
+      width: 68%;
+    }
 
-        @include _410 {
-          width: 68%;
-        }
+    @include _370 {
+      width: 65%;
+    }
 
-        @include _370 {
-          width: 65%;
-        }
+    @include _360 {
+      width: 65%;
+    }
 
-        @include _360 {
-          width: 65%;
-        }
-
-        @include _350 {
-          width: 60%;
-        }
-      }
+    @include _350 {
+      width: 60%;
     }
   }
 }
