--- a/src/styles/portfolios.scss
+++ b/src/styles/portfolios.scss
@@ -16,133 +16,133 @@
       @include _725 {
         width: 100%;
       }
+    }
+  }
 
-      .potfolio-image {
-        position: relative;
-        background-position: center center;
-        background-repeat: no-repeat;
-        overflow: hidden;
+  .potfolio-image {
+    position: relative;
+    background-position: center center;
+    background-repeat: no-repeat;
+    overflow: hidden;
 
-        &::before {
-          content: "";
-          position: absolute;
-          left: 15px;
-          top: 15px;
-          height: calc(100% - 30px);
-          width: calc(100% - 30px);
-          background: hsla(0, 0%, 100%, .9);
-          -webkit-transition: all .2s ease-out;
-          transition: all .2s ease-out;
-          -webkit-transform: scaleX(0);
-          transform: scaleX(0);
-          -webkit-transform-origin: 0;
-          transform-origin: 0;
-        }
+    &::before {
+      content: "";
+      position: absolute;
+      left: 15px;
+      top: 15px;
+      height: calc(100% - 30px);
+      width: calc(100% - 30px);
+      background: hsla(0, 0%, 100%, .9);
+      -webkit-transition: all .2s ease-out;
+      transition: all .2s ease-out;
+      -webkit-transform: scaleX(0);
+      transform: scaleX(0);
+      -webkit-transform-origin: 0;
+      transform-origin: 0;
+    }
 
-        img {
+    img {
+      vertical-align: middle;
+      min-height: 100%;
+      min-width: 100%;
+    }
+
+    ul {
+      margin-bottom: 0;
+      padding-left: 0;
+      position: absolute;
+      left: 0;
+      top: 50%;
+      text-align: center;
+      width: 100%;
+      -webkit-transform: translateY(-50%);
+      transform: translateY(-50%);
+      visibility: hidden;
+      opacity: 0;
+      margin-top: 30px;
+      -webkit-transition: all .075s ease-in-out .2s;
+      transition: all .075s ease-in-out .2s;
+
+      li {
+        list-style: none;
+        display: inline-block;
+        margin: 0 7px;
+
+        button,
+        a {
+          cursor: pointer;
+          display: inline-block;
+          height: 45px;
+          width: 45px;
+          padding: 5px 0;
           vertical-align: middle;
-          min-height: 100%;
-          min-width: 100%;
-        }
-
-        ul {
-          margin-bottom: 0;
-          padding-left: 0;
-          position: absolute;
-          left: 0;
-          top: 50%;
           text-align: center;
-          width: 100%;
-          -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
-          visibility: hidden;
-          opacity: 0;
-          margin-top: 30px;
-          -webkit-transition: all .075s ease-in-out .2s;
-          transition: all .075s ease-in-out .2s;
+          line-height: 1;
+          background: #a4acc4;
+          color: #fff;
+          border: 1px solid #a4acc4;
+          border-radius: 100px;
+          outline: none;
+          font-size: 1.25rem;
+          -webkit-transition: all .4s ease-out;
+          transition: all .4s ease-out;
 
-          li {
-            list-style: none;
-            display: inline-block;
-            margin: 0 7px;
-
-            button,
-            a {
-              cursor: pointer;
-              display: inline-block;
-              height: 45px;
-              width: 45px;
-              padding: 5px 0;
-              vertical-align: middle;
-              text-align: center;
-              line-height: 1;
-              background: #a4acc4;
-              color: #fff;
-              border: 1px solid #a4acc4;
-              border-radius: 100px;
-              outline: none;
-              font-size: 1.25rem;
-              -webkit-transition: all .4s ease-out;
-              transition: all .4s ease-out;
-
-              svg {
-                vertical-align: middle;
-                overflow: hidden;
-                height: 100%;
-              }
-            }
-
-            &.clicked {
-              .popup {
-                display: block;
-              }
-            }
+          svg {
+            vertical-align: middle;
+            overflow: hidden;
+            height: 100%;
           }
         }
 
-        &:hover {
-          &::before {
-            transform: scaleX(1);
-          }
-
-          ul {
-            visibility: visible;
-            opacity: 1;
-            margin-top: 0;
+        &.clicked {
+          .popup {
+            display: block;
           }
         }
       }
+    }
 
-      p {
-        font-size: 1.14rem;
-        line-height: 1.857rem;
+    &:hover {
+      &::before {
+        transform: scaleX(1);
       }
 
-      .popup {
-        position: fixed;
-        width: 100%;
-        height: 100%;
-        top: 0;
-        left: 0;
-        background: linear-gradient(rgba(30,30,30,.6),#000 1810%);
-        z-index: 9999999;
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        -ms-user-select: none;
-        user-select: none;
-        -webkit-tap-highlight-color: transparent;
-        display: none;
-
-        img {
-          display: block;
-          width: 60%;
-          margin: 0 auto;
-          position: fixed;
-          top: 50%;
-          left: 50%;
-          transform: translate(-50%, -50%);
-        }
+      ul {
+        visibility: visible;
+        opacity: 1;
+        margin-top: 0;
       }
+    }
+  }
+
+  p {
+    font-size: 1.14rem;
+    line-height: 1.857rem;
+  }
+
+  .popup {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background: linear-gradient(rgba(30, 30, 30, .6), #000 1810%);
+    z-index: 9999999;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    -webkit-tap-highlight-color: transparent;
+    display: none;
+
+    img {
+      display: block;
+      width: 60%;
+      margin: 0 auto;
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
     }
   }
 }
