--- a/src/App.scss
+++ b/src/App.scss
@@ -1,119 +1,9 @@
 @import './styles/variables';
 @import './media_mixin';
+@import './styles/base';
 @import './styles/sidebar';
 @import './styles/component';
 @import './styles/about';
 @import './styles/resume';
 @import './styles/portfolios';
 @import './styles/contact';
-
-html {
-  box-sizing: border-box;
-  font-size: 16px;
-
-  @include _800 {
-    font-size: 14px;
-  }
-
-  @include _525 {
-    font-size: 12px;
-  }
-
-  @include _380 {
-    font-size: 11px;
-  }
-}
-
-body,
-html,
-#id {
-  height: 100%;
-}
-
-*,
-*:before,
-*:after {
-  box-sizing: inherit;
-}
-
-body,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-ol,
-ul {
-  margin: 0;
-  padding: 0;
-  font-weight: normal;
-}
-
-ol,
-ul {
-  list-style: none;
-}
-
-a {
-  text-decoration: none;
-}
-
-img {
-  max-width: 100%;
-  height: auto;
-}
-
-body {
-  background-image: url(../src/img/b5c6655359940e111d0dc791dea0b859.jpg);
-  background-size: cover;
-  background-repeat: repeat;
-  position: relative;
-}
-
-#wrapper {
-  max-width: 1100px;
-  font-family: "Nunito Sans", sans-serif;
-  margin: 0 auto;
-  height: 100%;
-  padding: 0 15px;
-  box-sizing: border-box;
-  position: relative;
-
-  @include _970 {
-    width: 800px;
-  }
-
-  @include _870 {
-    width: 100%;
-  }
-
-  main {
-    margin: 50px 0 50px 280px;
-    width: calc(100% - 280px);
-    background-color: rgba(255, 255, 255, 0.9);
-    padding: 20px;
-    font-size: 1.2rem;
-
-    @include _970 {
-      width: 800px;
-      margin-left: 0;
-      margin-bottom: 0;
-    }
-
-    @include _870 {
-      width: 100%;
-    }
-
-    .border {
-      padding: 40px 20px;
-      border-left: 5px solid $dark-gold;
-      border-right: 5px solid $light-gold;
-      background-image: linear-gradient(90deg, $dark-gold, $light-gold), linear-gradient(90deg, $dark-gold, $light-gold);
-      background-size: 100% 5px;
-      background-position: 0 0, 0 100%;
-      background-repeat: no-repeat;
-    }
-  }
-}
