--- a/src/App.css
+++ b/src/App.css
@@ -580,7 +580,7 @@ aside nav ul li a:hover {
   font-size: 1.14rem;
   line-height: 1.857rem;
 }
-#portfolios .popup {
+#portfolios .popup-wrap {
   position: fixed;
   width: 100%;
   height: 100%;
@@ -593,16 +593,28 @@ aside nav ul li a:hover {
   -ms-user-select: none;
   user-select: none;
   -webkit-tap-highlight-color: transparent;
-  display: none;
 }
-#portfolios .popup img {
+#portfolios .popup-window {
+  position: relative;
   display: block;
   width: 60%;
+  height: auto;
   margin: 0 auto;
   position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  border: 5px solid #fff;
+  border-radius: 3px;
+}
+#portfolios .popup-window img {
+  display: block;
+}
+#portfolios .popup-window button {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  cursor: pointer;
 }
 
 #contact .form-field {
