--- a/src/styles/portfolios.scss
+++ b/src/styles/portfolios.scss
@@ -120,7 +120,7 @@
     line-height: 1.857rem;
   }
 
-  .popup {
+  .popup-wrap {
     position: fixed;
     width: 100%;
     height: 100%;
@@ -133,16 +133,31 @@
     -ms-user-select: none;
     user-select: none;
     -webkit-tap-highlight-color: transparent;
-    display: none;
+    //display: none;
+  }
+
+  .popup-window {
+    position: relative;
+    display: block;
+    width: 60%;
+    height: auto;
+    margin: 0 auto;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border: 5px solid #fff;
+    border-radius: 3px;
 
     img {
       display: block;
-      width: 60%;
-      margin: 0 auto;
-      position: fixed;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
+    }
+
+    button {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      cursor: pointer;
     }
   }
 }
