--- a/src/App.css
+++ b/src/App.css
@@ -612,9 +612,24 @@ aside nav ul li a:hover {
 }
 #portfolios .popup-window button {
   position: absolute;
-  top: 10px;
-  right: 10px;
+  top: 2%;
+  right: 2%;
   cursor: pointer;
+  background: none;
+  border: none;
+  outline: none;
+  width: 7%;
+  box-sizing: border-box;
+}
+#portfolios .popup-window button i {
+  font-size: 2.2rem;
+  height: 1.8rem;
+  line-height: 1.8rem;
+  color: #fff;
+}
+#portfolios .popup-window button:hover i {
+  transform: rotate(180deg);
+  transition: transform 0.5s;
 }
 
 #contact .form-field {
