--- a/src/styles/portfolios.scss
+++ b/src/styles/portfolios.scss
@@ -155,9 +155,28 @@
 
     button {
       position: absolute;
-      top: 10px;
-      right: 10px;
+      top: 2%;
+      right: 2%;
       cursor: pointer;
+      background: none;
+      border: none;
+      outline: none;
+      width: 7%;
+      box-sizing: border-box;
+
+      i {
+        font-size: 2.2rem;
+        height: 1.8rem;
+        line-height: 1.8rem;
+        color: #fff;
+      }
+
+      &:hover {
+        i {
+          transform: rotate(180deg);
+          transition: transform 0.5s;
+        }
+      }
     }
   }
 }
