--- a/src/styles/portfolios.scss
+++ b/src/styles/portfolios.scss
@@ -155,13 +155,12 @@
 
     button {
       position: absolute;
-      top: 2%;
-      right: 2%;
+      top: 0;
+      right: 0;
       cursor: pointer;
       background: none;
       border: none;
       outline: none;
-      width: 7%;
       box-sizing: border-box;
 
       i {
