--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,5 @@
 @import './styles/variables';
-@import './media_mixin';
+@import './styles/media_mixin.scss';
 @import './styles/base';
 @import './styles/sidebar';
 @import './styles/component';
