--- a/src/styles/contact.scss
+++ b/src/styles/contact.scss
@@ -30,4 +30,10 @@
       padding: 10px 15px;
     }
   }
+
+  .userMessage {
+    margin: 20px 10px;
+    padding: 10px;
+    border: 3px solid $dark-green;
+  }
 }
