--- a/src/App.scss
+++ b/src/App.scss
@@ -4,6 +4,6 @@
 @import './styles/sidebar';
 @import './styles/component';
 @import './styles/about';
-@import './styles/resume';
+@import './styles/skills';
 @import './styles/portfolios';
 @import './styles/contact';
