Renamed Portfolios to Projects

--- a/src/styles/portfolios.scss
+++ b/src/styles/portfolios.scss
@@ -1,11 +1,11 @@
-#portfolios {
+#projects {
 
-  .portfolios-wrap {
+  .projects-wrap {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
 
-    .portfolios-box {
+    .projects-box {
       width: 32%;
       margin-bottom: 20px;
 
