--- a/src/App.css
+++ b/src/App.css
@@ -474,32 +474,32 @@ aside nav ul li a:hover {
   background: #275129;
 }
 
-#portfolios .portfolios-wrap {
+#projects .projects-wrap {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
 }
-#portfolios .portfolios-wrap .portfolios-box {
+#projects .projects-wrap .projects-box {
   width: 32%;
   margin-bottom: 20px;
 }
 @media (max-width: 1170px) {
-  #portfolios .portfolios-wrap .portfolios-box {
+  #projects .projects-wrap .projects-box {
     width: 45%;
   }
 }
 @media (max-width: 725px) {
-  #portfolios .portfolios-wrap .portfolios-box {
+  #projects .projects-wrap .projects-box {
     width: 100%;
   }
 }
-#portfolios .potfolio-image {
+#projects .potfolio-image {
   position: relative;
   background-position: center center;
   background-repeat: no-repeat;
   overflow: hidden;
 }
-#portfolios .potfolio-image::before {
+#projects .potfolio-image::before {
   content: "";
   position: absolute;
   left: 15px;
@@ -514,12 +514,12 @@ aside nav ul li a:hover {
   -webkit-transform-origin: 0;
   transform-origin: 0;
 }
-#portfolios .potfolio-image img {
+#projects .potfolio-image img {
   vertical-align: middle;
   min-height: 100%;
   min-width: 100%;
 }
-#portfolios .potfolio-image ul {
+#projects .potfolio-image ul {
   margin-bottom: 0;
   padding-left: 0;
   position: absolute;
@@ -535,13 +535,13 @@ aside nav ul li a:hover {
   -webkit-transition: all 0.075s ease-in-out 0.2s;
   transition: all 0.075s ease-in-out 0.2s;
 }
-#portfolios .potfolio-image ul li {
+#projects .potfolio-image ul li {
   list-style: none;
   display: inline-block;
   margin: 0 7px;
 }
-#portfolios .potfolio-image ul li button,
-#portfolios .potfolio-image ul li a {
+#projects .potfolio-image ul li button,
+#projects .potfolio-image ul li a {
   cursor: pointer;
   display: inline-block;
   height: 45px;
@@ -559,28 +559,28 @@ aside nav ul li a:hover {
   -webkit-transition: all 0.4s ease-out;
   transition: all 0.4s ease-out;
 }
-#portfolios .potfolio-image ul li button svg,
-#portfolios .potfolio-image ul li a svg {
+#projects .potfolio-image ul li button svg,
+#projects .potfolio-image ul li a svg {
   vertical-align: middle;
   overflow: hidden;
   height: 100%;
 }
-#portfolios .potfolio-image ul li.clicked .popup {
+#projects .potfolio-image ul li.clicked .popup {
   display: block;
 }
-#portfolios .potfolio-image:hover::before {
+#projects .potfolio-image:hover::before {
   transform: scaleX(1);
 }
-#portfolios .potfolio-image:hover ul {
+#projects .potfolio-image:hover ul {
   visibility: visible;
   opacity: 1;
   margin-top: 0;
 }
-#portfolios p {
+#projects p {
   font-size: 1.14rem;
   line-height: 1.857rem;
 }
-#portfolios .popup-wrap {
+#projects .popup-wrap {
   position: fixed;
   width: 100%;
   height: 100%;
@@ -594,7 +594,7 @@ aside nav ul li a:hover {
   user-select: none;
   -webkit-tap-highlight-color: transparent;
 }
-#portfolios .popup-window {
+#projects .popup-window {
   position: relative;
   display: block;
   width: 60%;
@@ -607,10 +607,10 @@ aside nav ul li a:hover {
   border: 5px solid #fff;
   border-radius: 3px;
 }
-#portfolios .popup-window img {
+#projects .popup-window img {
   display: block;
 }
-#portfolios .popup-window button {
+#projects .popup-window button {
   position: absolute;
   top: 0;
   right: 0;
@@ -621,37 +621,37 @@ aside nav ul li a:hover {
   box-sizing: border-box;
 }
 @media (max-width: 525px) {
-  #portfolios .popup-window button {
+  #projects .popup-window button {
     padding: 0 10px;
     height: 2.8rem;
   }
 }
 @media (max-width: 350px) {
-  #portfolios .popup-window button {
+  #projects .popup-window button {
     height: 2.8rem;
     padding: 7px;
   }
 }
-#portfolios .popup-window button i {
+#projects .popup-window button i {
   font-size: 2.2rem;
   height: 1.8rem;
   line-height: 1.8rem;
   color: #fff;
 }
 @media (max-width: 665px) {
-  #portfolios .popup-window button i {
+  #projects .popup-window button i {
     font-size: 2rem;
     height: 1.6rem;
     line-height: 1.6rem;
   }
 }
 @media (max-width: 525px) {
-  #portfolios .popup-window button i {
+  #projects .popup-window button i {
     height: 1.3rem;
     line-height: 1.3rem;
   }
 }
-#portfolios .popup-window button:hover i {
+#projects .popup-window button:hover i {
   transform: rotate(180deg);
   transition: transform 0.5s;
 }
