--- a/src/App.scss
+++ b/src/App.scss
@@ -5,5 +5,5 @@
 @import './styles/component';
 @import './styles/about';
 @import './styles/skills';
-@import './styles/portfolios';
+@import './styles/projects';
 @import './styles/contact';
