--- a/src/styles/projects.scss
+++ b/src/styles/projects.scss
@@ -19,7 +19,7 @@
     }
   }
 
-  .potfolio-image {
+  .portfolio-image {
     position: relative;
     background-position: center center;
     background-repeat: no-repeat;
